@@ -1,4 +1,24 @@
 /*
+ * Copyright 2009-2011 Brian Pellin.
+ *     
+ * This file is part of KeePassDroid.
+ *
+ *  KeePassDroid is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  KeePassDroid is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ *
+
+Derived from
 
 KeePass for J2ME
 
@@ -285,6 +305,20 @@ public class PwDatabaseV3 extends PwDatabase {
 	@Override
 	public PwGroup createGroup() {
 		return new PwGroupV3();
+	}
+
+	@Override
+	public boolean isBackup(PwGroup group) {
+		PwGroupV3 g = (PwGroupV3) group;
+		while (g != null) {
+			if (g.level == 0 && g.name.equalsIgnoreCase("Backup")) {
+				return true;
+			}
+			
+			g = g.parent;
+		}
+		
+		return false;
 	}
 
 }
