@@ -1,5 +1,5 @@
 /*
- * Copyright 2010 Brian Pellin.
+ * Copyright 2010-2011 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -240,5 +240,24 @@ public class PwDatabaseV4 extends PwDatabase {
 	@Override
 	public PwGroup createGroup() {
 		return new PwGroupV4();
+	}
+
+	@Override
+	public boolean isBackup(PwGroup group) {
+		if (!recycleBinEnabled) {
+			return false;
+		}
+		PwGroupV4 g = (PwGroupV4) group;
+		
+		// Need to loop upwards to see if any ancestor is the recycle bin
+		while (g != null) {
+			if (recycleBinUUID.equals(g.uuid) || g.name.equalsIgnoreCase("Backup")) {
+				return true;
+			}
+			
+			g = g.parent;
+		}
+		
+		return false;
 	}
 }
