@@ -1,3 +1,6 @@
+  * New setting to omit backup and recycle bin entries (based on contribution
+    from ABGH)
+
 KeePassDroid (1.9.2)
   * Fix date display in .kdbx entries
   * Support .kdbx format changes in KeePass 2.15
